mutants.out/log/crates__script__src__lib.rs_line_54_col_9.log

*** crates/script/src/lib.rs:54:9: replace ScriptDependency::version -> Self with Default::default()

*** mutation diff:
--- crates/script/src/lib.rs
+++ replace ScriptDependency::version -> Self with Default::default()
@@ -46,20 +46,17 @@
 #[derive(Debug, Clone, PartialEq, Eq)]
 pub struct ScriptDependency {
     pub name: String,
     pub source: ScriptDependencySource,
 }
 
 impl ScriptDependency {
     pub fn version(name: impl Into<String>, version: impl Into<String>) -> Self {
-        Self {
-            name: name.into(),
-            source: ScriptDependencySource::Version(version.into()),
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn path(name: impl Into<String>, path: impl Into<PathBuf>) -> Self {
         Self {
             name: name.into(),
             source: ScriptDependencySource::Path(path.into()),
         }
     }


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=script@0.1.0
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
       Dirty script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/script): the file `crates/script/src/lib.rs` has changed (1778057815.787207573s, 1m 11s after last build at 1778057744.577071082s)
   Compiling script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/script)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=19ba3a930712f621 -C extra-filename=-d9ac782f4dc64702 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fb3202c648cb3754 -C extra-filename=-d02cc1a249e66324 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps`
error[E0277]: the trait bound `ScriptDependency: Default` is not satisfied
  --> crates/script/src/lib.rs:54:9
   |
54 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ScriptDependency`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `script` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=19ba3a930712f621 -C extra-filename=-d9ac782f4dc64702 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `script` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fb3202c648cb3754 -C extra-filename=-d02cc1a249e66324 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
